--- a/index.html
+++ b/index.html
@@ -12,9 +12,25 @@
         <div id="testa">
             <img id="logo" src="img/logo.svg">
         </div>
-
     </header>
+<!--Titolo e foto-->
     <main>
+        <section>
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-lee</h1>
+            <div id="intestazione">Scritto da <span id="autore">The Booleaner</span></div>
+            <div id="data">il 10/10/2020</div>
+            <div id="immagini_tim">
+                <img src="img/tim-1.jpg" alt="tim">
+                <img src="img/tim-2.jpg" alt="tim">
+            </div>
+            
+            <div class="didascalia">1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</div>
+            <div class="didascalia">2nd Photo: Wikimedia, by Paul Clarke</div>
+        </section>
+
+        <section>
+
+        </section>
 
     </main>
     <article>
