--- a/index.html
+++ b/index.html
@@ -29,11 +29,44 @@
         </section>
 
         <section>
+            <p class="paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis maiores laboriosam debitis. <mark>Quo totam dolorem numquam at consequuntur?</mark> Quo, incidunt? Deserunt, laboriosam iste architecto debitis saepe quam nemo! Repellendus, eligendi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis maiores laboriosam debitis. Quo totam dolorem numquam at consequuntur? Quo, incidunt? Deserunt, laboriosam iste architecto debitis saepe quam nemo! Repellendus, eligendi.</p>
+            <ul>
+                <li>ed scelerisque tincidunt massa. Aliquam erat volutpat. Aenean interdum felis non porta mollis.</li>
+                <li>Etiam egestas quis magna at fermentum. In eu pulvinar velit. Donec gravida, nunc id ornare iaculis.</li>
+                <li>Quisque risus quam, malesuada et velit quis, euismod venenatis sem. Phasellus molestie</li>
+            </ul>
+            <table>
+                <tr id="int_tabella">
+                    <th class="th0">Lorem ipsum dolor</th>
+                    <th class="th0">Lorem ipsum dolor</th>
+                    <th id="th2">Lorem ipsum dolor</th>
+                  </tr>
+                  <tr class="azzurro">
+                    <td class="prima">Lorem ipsum dolor</td>
+                    <td class="prima">Lorem ipsum dolor</td>
+                    <td class="seconda">ed scelerisque tincidunt massa. Aliquam erat volutpat. Aenean interdum felis non porta mollis.</td>
+                  </tr>
+                  <tr class="bianco">
+                    <td class="prima">Lorem ipsum dolor</td>
+                    <td class="prima">Lorem ipsum dolor</td>
+                    <td class="seconda">ed scelerisque tincidunt massa. Aliquam erat volutpat. Aenean interdum felis non porta mollis.</td>
+                  </tr>
+                  <tr class="azzurro">
+                    <td class="prima">Lorem ipsum dolor</td>
+                    <td class="prima">Lorem ipsum dolor</td>
+                    <td class="seconda">ed scelerisque tincidunt massa. Aliquam erat volutpat. Aenean interdum felis non porta mollis.</td>
+                  </tr>
+            </table>
+
+            <p class="paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis maiores laboriosam debitis. <mark>Quo totam dolorem numquam at consequuntur?</mark> Quo, incidunt? Deserunt, laboriosam iste architecto debitis saepe quam nemo! Repellendus, eligendi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis maiores laboriosam debi Quo totam dolorem numquam at consequuntur? Quo, incidunt? Deserunt, laboriosam iste architecto debitis saepe quam nemo! Repellendus, eligendi.</p>
 
         </section>
-
     </main>
+
     <article>
+        <h4>Potrebbero interessarti</h4>
+        <div id="articolo1">Lorem ipsium dolor</div>
+        <div id="articolo2">Lorem ipsium dolor</div>
 
     </article>
 </body>
