--- a/bonus/index.html
+++ b/bonus/index.html
@@ -15,6 +15,7 @@
     </header>
 <!--Titolo e foto-->
     <main>
+    <div class="container">
         <section>
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-lee</h1>
             <div id="intestazione">Scritto da <span id="autore">The Booleaner</span></div>
@@ -69,5 +70,6 @@
         <div id="articolo2">Lorem ipsium dolor</div>
 
     </article>
+    </div>
 </body>
 </html>
